fix HTML injections

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -7,8 +7,11 @@
   <body>
     Matikkaeditori
     <div id = "save">
-      <input id = "name">
-      <button>Save</button>
+      <button>Uusi tallenne</button>
+      <div id = "save-hidden" style="display:none">
+        <input id = "name">
+        <button>Tallenna</button>
+      </div>
     </div>
     <div id = "saves-list">
 
